5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1601_1806.log
== TEST (2019-03-25 18:59:41) 
-- CODE:
from math import pow, factorial

n = int(input("Numero de pessoas: "))

p = factorial(n)

print(p)


-- OUTPUT:
479001600
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:00:59) 
-- CODE:
from math import pow, factorial

n = int(input("Numero de pessoas: "))

p = 1 - (factorial(365)/factorial(365 - n))*(pow(365, -n))

print(p)


-- EXECUTION TIME:
0.104902
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.1670247888380645
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.5383442579145288
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
0.9999995783990275
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:01:22) 
-- CODE:
from math import pow, factorial

n = int(input("Numero de pessoas: "))

p = 1 - (factorial(365)/factorial(365 - n)) * (365(-n))

print(p)


-- EXECUTION TIME:
0.214559
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1806/main.py", line 5, in <module>
    p = 1 - (factorial(365)/factorial(365 - n)) * (365(-n))
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:02:05) 
-- CODE:
from math import *

n = int(input("Numero de pessoas: "))

p = 1 - (math.factorial(365)/math.factorial(365 - n)) * (365**(-n))

print(p)


-- EXECUTION TIME:
0.150659
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1806/main.py", line 5, in <module>
    p = 1 - (math.factorial(365)/math.factorial(365 - n)) * (365**(-n))
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:02:30) 
-- CODE:
from math import *

n = int(input("Numero de pessoas: "))

p = 1 - (math.factorial(365)/math.factorial(365 - n)) * (1/(365**n))

print(p)


-- EXECUTION TIME:
0.178364
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1806/main.py", line 5, in <module>
    p = 1 - (math.factorial(365)/math.factorial(365 - n)) * (1/(365**n))
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:02:56) 
-- CODE:
from math import *

n = int(input("Numero de pessoas: "))

p = 1 - (math.factorial(365)/math.factorial(365 - n)) * (1/(365**n))

print(round(p,2)


-- EXECUTION TIME:
0.192577
-- ERROR:
  File "/home/codebench/codes/1601/1806/main.py", line 9
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:03:00) 
-- CODE:
from math import *

n = int(input("Numero de pessoas: "))

p = 1 - (math.factorial(365)/math.factorial(365 - n)) * (1/(365**n))

print(round(p,2))


-- EXECUTION TIME:
0.154703
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1806/main.py", line 5, in <module>
    p = 1 - (math.factorial(365)/math.factorial(365 - n)) * (1/(365**n))
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:03:36) 
-- CODE:
from math import *

n = int(input("Numero de pessoas: "))

p = 1 - (math.factorial(365)/math.factorial(365 - n)) * (1/(365**n))

print(round(p,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    p = 1 - (math.factorial(365)/math.factorial(365 - n)) * (1/(365**n))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:03:55) 
-- CODE:
import math

n = int(input("Numero de pessoas: "))

p = 1 - (math.factorial(365)/math.factorial(365 - n)) * (1/(365**n))

print(round(p,2))


-- EXECUTION TIME:
0.159643
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:03:59) 
-- CODE:
import math

n = int(input("Numero de pessoas: "))

p = 1 - (math.factorial(365)/math.factorial(365 - n)) * (1/(365**n))

print(round(p,2))


-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:04:37) 
-- CODE:
import math

n = int(input("Numero de pessoas: "))

p = 1 - ((math.factorial(365))/(math.factorial(365 - n))) * (1/(365**n))

print(round(p,2))


-- EXECUTION TIME:
0.143988
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:04:42) 
-- CODE:
import math

n = int(input("Numero de pessoas: "))

p = 1 - ((math.factorial(365))/(math.factorial(365 - n))) * (1/(365**n))

print(round(p,2))


-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:06:08) 
-- CODE:
import math

n = int(input("Numero de pessoas: "))

p = 1 - ((math.factorial(365))/(math.factorial(365 - n))) * (365**(-n))

print(round(p,2))


-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:07:22) 
-- CODE:
import math

n = int(input("Numero de pessoas: "))

p = 1 - ((math.factorial(365))/(math.factorial(365 - n))) * (1/365**n)

print(p)


-- OUTPUT:
0.1670247888380645
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:08:09) 
-- CODE:
import math

n = int(input("Numero de pessoas: "))

p = 1 - ((math.factorial(365))/(math.factorial(365 - n))) * (1/365**n)

print(round(p*100,2))


-- EXECUTION TIME:
0.143935
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
